--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "scss" : "sass --watch src/scss/main.scss:src/main.css",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "git" : "git add . && git commit -m "
   },
   "eslintConfig": {
     "extends": [
