--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "git" : "git add . && git commit -m "
+    "git" : "git add . && git commit -m $npm_package_version && git push"
   },
   "eslintConfig": {
     "extends": [
