--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lautsprecher",
   "version": "0.1.0",
   "private": true,
+  "message" : "This is a test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "git" : "git add . && git commit -m $npm_package_version && git push"
+    "git" : "git add . && git commit -m $message && git push"
   },
   "eslintConfig": {
     "extends": [
