--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "lautsprecher",
   "version": "0.1.0",
   "private": true,
-  "message" : "second test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "git" : "git add . && git commit -m $message && git push"
+    "git" : "git add . && git commit -m "
   },
   "eslintConfig": {
     "extends": [
